src/dotenv/snapshots/ntro__env__typehint_parser__tests__parse_type_hints-4.snap
---
source: src/env/typehint_parser.rs
expression: "Parser::new(\"@type 'qa' | 'dev' | 'prod'\").parse()"
---
Some(
    Union(
        [
            "'qa'",
            "'dev'",
            "'prod'",
        ],
    ),
)
