src/dotenv/snapshots/ntro__env__typehint_parser__tests__string_type_declaration-2.snap
---
source: src/env/typehint_parser.rs
expression: "Lexer::new(\"@type number\").collect::<Vec<_>>()"
---
[
    Token {
        kind: Keyword,
        start: 0,
        text: "@type",
    },
    Token {
        kind: NumberType,
        start: 6,
        text: "number",
    },
]
